src/objects/Rebound_Relationship__c.object
<CustomObject>
    <description>Used for the COVID19 Rebound Project in North America to collect feedback from Sales Reps as to who has the closest relationship with the customer to lead the discussion when reopening</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Rebound_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner_SBU__c</fullName>
        <formula>Relationship_OwnerRebound__r.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Relationship Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_OwnerRebound__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebound_Relationship_Owner1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Rating__c</fullName>
        <label>Relationship Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4 – Amazing relationship/Loyal Customer</fullName>
                    <color>#33FF33</color>
                    <label>4 – Amazing relationship/Loyal Customer</label>
                </value>
                <value>
                    <fullName>3 – Good relationship</fullName>
                    <color>#66FF99</color>
                    <label>3 – Good relationship</label>
                </value>
                <value>
                    <fullName>2 – Habitual buyer</fullName>
                    <color>#AFCADF</color>
                    <label>2 – Habitual buyer</label>
                </value>
                <value>
                    <fullName>1 – Occasional buyer</fullName>
                    <color>#F3D904</color>
                    <label>1 – Occasional buyer</label>
                </value>
                <value>
                    <fullName>0.5 – New buyer</fullName>
                    <color>#FF6600</color>
                    <label>0.5 – New buyer</label>
                </value>
                <value>
                    <fullName>0 – No relationship</fullName>
                    <color>#990000</color>
                    <label>0 – No relationship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rebound Relationship</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Relationship_OwnerRebound__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <displayFormat>REBOUND-{00000}</displayFormat>
        <label>Rebound Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebound Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>